--- a/lm-front/src/App.css
+++ b/lm-front/src/App.css
@@ -12,8 +12,8 @@
   justify-content: start;
   align-items: center;
   width: 100vw;
-  height: 100vh;
-  overflow: hidden;
+  min-height: 100vh;
+  overflow-x: hidden;
   background-color:#000F1C;
   color: #00A2FF;
   margin: 0;
@@ -21,9 +21,11 @@
 }
 
 @media screen and (max-device-width: 600px){
-  #app{
-    width: 100vw;
-    overflow-x: hidden;
-    overflow-y: scroll;
-  }
+
+}
+
+#body{
+  width: 100vw;
+  overflow-x: hidden;
+  margin-top: 22vh;
 }
