--- a/lm-front/src/App.css
+++ b/lm-front/src/App.css
@@ -1,9 +1,9 @@
 *{
-    margin:0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
-    font-size: 16px;
+  margin:0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+  font-size: 16px;
 }
 
 #app{
@@ -11,21 +11,28 @@
   flex-direction: column;
   justify-content: start;
   align-items: center;
-  width: 100vw;
-  min-height: 100vh;
-  overflow-x: hidden;
-  background-color:#000F1C;
-  color: #00A2FF;
+  color: #00a2ff;
   margin: 0;
   padding: 0;
+  background-color: #000910;
+}
+
+::-webkit-scrollbar{
+  width: 8px;
+  background: linear-gradient(90deg, #00182c 30%, black 98%);
+
+}
+
+::-webkit-scrollbar-thumb{
+  background: linear-gradient(90deg, #000f1c 0%, #3800a7 16%, #5601ff 51%, #3800a7 84%, #000f1c 100%);
+  height: 1vh;
+  border-radius: 30px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: linear-gradient(90deg, #000f1c 0%, #3800a7 16%, #4b20a1 51%, #3800a7 84%, #000f1c 100%);
 }
 
 @media screen and (max-device-width: 600px){
 
-}
-
-#body{
-  width: 100vw;
-  overflow-x: hidden;
-  margin-top: 22vh;
 }
